<package>

  <name>ugv_msgs</name>
  <version>1.2.0</version>
  <description>
    ROS message definitions for UGV.
  </description>
  <maintainer email="hitmaxtom@gmail.com">Maxtom0</maintainer>
  <author>Maxtom0</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
