<?xml version="1.0"?>
<package format="2">
  <name>map_segmenter</name>
  <version>0.0.0</version>
  <description>The map_segmenter package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="i@todo.todo">i</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_visualization</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>ugv_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>genmsg</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>

  <export>

  </export>
</package>
