<?xml version="1.0"?>
<package format="2">
  <name>robot_center_mapping</name>
  <version>0.0.0</version>
  <description>The robot_center_mapping package</description>
  <maintainer email="hitmaxtom@gmail.com">maxtom</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_visualization</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>kindr</depend>
  <depend>kindr_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>ugv_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nav_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
