<?xml version="1.0"?>
<package format="2">
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>The od package</description>

  <maintainer email="i@todo.todo">i</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>ugv_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libpcl_all_dev</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>laser_geometry</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
